--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@tensorflow-models/mobilenet": "^0.2.2",
     "@tensorflow/tfjs": "^0.14.1"
   },
-  "//": "'@tensorflow-models/coco-ssd': '^0.1.1'",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
@@ -77,7 +76,10 @@
   "browserslist": "last 2 versions",
   "compress": {
     "test": "(css|html|js|!map)",
-    "threshold": 144000
+    "threshold": 144000,
+    "brotli": {
+      "enabled": false
+    }
   },
   "eslintConfig": {
     "env": {
